...
        .accessibilityAddTraits(isSelected ? .isSelected : [])
    }
}

private extension AutoClearSettingsView {
    enum Constants {
        static let toggleAccessibilityIdentifier = "AutoclearEnabledToggle"
    }
}

