# autoclear.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - release

---

# Set up  - custom setup
- launchApp:
    appId: "com.duckduckgo.mobile.ios"
    clearState: true
    clearKeychain: true
    arguments:
        isOnboardingCompleted: ${ONBOARDING_COMPLETED}
        "autoclear-ui-test": true
        isRunningUITests: true
        ff.browsingMenuSheetEnabledByDefault: "true"
        ff.burnSingleTab: "true"
        ff.enhancedDataClearingSettings: "true"

# Enable autoclear

- tapOn: "Browsing Menu"
- tapOn: "Settings"
- assertVisible:
    id: "Settings.ListItem.Field_DefaultBrowser"
- scrollUntilVisible:
    centerElement: true
    element:
      text: "Data Clearing"
- assertVisible: "Data Clearing"
- tapOn: "Data Clearing"
- assertVisible: "Off"
- assertVisible: "Automatically Delete Data"
- tapOn: "Automatically Delete Data"
- assertVisible: 
    id: "AutoclearEnabledToggle"
- tapOn: 
    id: "AutoclearEnabledToggle"
- assertVisible: "App Exit, Inactive for 5 Minutes"
- tapOn: "App Exit, Inactive for 5 Minutes"
- tapOn: "Data Clearing" # Uses the name of the previous page
- tapOn: "Settings"
- tapOn: "Done"

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/features/local-storage.html"
- pressKey: Enter

# Add a cookie
- assertVisible: "Storage Counter: undefined"
- assertVisible: "Cookie Counter:"
- assertNotVisible: "Cookie Counter: 1"
- assertNotVisible: "Storage Counter: 1"
- assertVisible: "Manual Increment"
- tapOn: "Manual Increment"
- assertVisible: "Cookie Counter: 1"
- assertVisible: "Storage Counter: 1"

# Load a new tab
- longPressOn: "Tab Switcher"
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://example.com"
- pressKey: Enter

- assertVisible: ".*Example Domain.*"

# Go home and hover there a bit
- pressKey: Home

- repeat:
    times: 3
    commands:
      - swipe:  
          start: 50%, 50%
          end: 10%, 50%
      - swipe:  
          start: 10%, 50%
          end: 50%, 50%

- tapOn: "DuckDuckGo"

- assertVisible: "Tab Switcher" # wait for the tab switcher to appear so that we don't try and use the blank snapshot view
- assertNotVisible: "https://example.com/"
- assertVisible: "Search or enter address"
- tapOn: "Tab Switcher"
- assertNotVisible: "Example Domain"
- assertVisible: "1 Private Tab"
- tapOn: "Done"

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/features/local-storage.html"
- pressKey: Enter
- assertVisible: "Storage Counter: undefined"
- assertVisible: "Cookie Counter:"
