# bookmarks.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn:
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site"
- pressKey: Enter

- assertVisible: ".*Privacy Test Pages.*"
 
# Bookmark site
- assertVisible: "Browsing menu"
- tapOn: "Browsing menu"
- assertVisible: "Add Bookmark"
- tapOn: "Add Bookmark"

# Verify bookmark appears in search results and can be launched
- tapOn: "Tab Switcher"
- tapOn: "New Tab"
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "pri"
- assertVisible: "Privacy Test Pages - Home"
- assertVisible: "privacy-test-pages.site"
- tapOn: "Privacy Test Pages - Home"
- runFlow: ../shared/pull_to_refresh.yaml

# Verify site has been bookmarked
- assertVisible: "Browsing menu"
- runFlow:
    file: ../shared/open_browsing_menu_item.yaml
    env:
      ITEM: "Bookmarks"
- assertVisible: "Privacy Test Pages - Home"

# Edit bookmark
- assertVisible: "Edit"
- tapOn: "Edit"
- tapOn: "chevron"
- assertVisible: "Add Folder"

# Add folder
- tapOn: "Add Folder"
- assertVisible: "Add Folder"
- assertVisible: "Save"
- assertVisible: "Bookmarks"
- assertVisible: "Title"
- tapOn: "Title"
- inputText: "Test Folder"
- tapOn: "Save"
- assertVisible: "Edit Bookmark"
- assertVisible: "Add Folder"
- assertVisible: "Test Folder"
- tapOn: "Save"
- tapOn: "Done"
- assertNotVisible: "Remove Privacy Test Pages - Home"
- assertVisible: "Test Folder"
- tapOn: "Test Folder"
- assertVisible: "Privacy Test Pages - Home"

# Move folder
- assertVisible: "Edit"
- tapOn: "Edit"
- tapOn: "chevron"
- assertVisible: "Add Folder"

- tapOn: "Add Folder"
- assertVisible: "Add Folder"
- assertVisible: "Save"
- assertVisible: "Bookmarks"
- assertVisible: "Title"
- tapOn: "Title"
- inputText: "Test Folder 2"
- tapOn: "Save"
- assertVisible: "Edit Bookmark"
- assertVisible: "Add Folder"
- assertVisible: "Test Folder"
- tapOn: "Save"
- tapOn: "Done"
- assertNotVisible: "Remove Privacy Test Pages - Home"
- assertVisible: "Test Folder"
- tapOn: "Test Folder"
- assertVisible: "Test Folder 2"
- tapOn: "Test Folder 2"

# Delete bookmark
- tapOn: "Edit"
- tapOn: "chevron"
- hideKeyboard
- assertVisible: "Delete"
- tapOn: "Delete"
- assertVisible: "Delete?"
- tapOn: "Delete"

# Verify site has been removed from bookmarks
- assertNotVisible: "Privacy Test Pages - Home"
- assertVisible: "Test Folder 2"
- assertVisible: "Test Folder"
- tapOn: "Test Folder"
- assertNotVisible: "Privacy Test Pages - Home"
- assertVisible: "Bookmarks"
- tapOn: "Bookmarks"

# Remove folder
- tapOn: "Edit"
- assertVisible: "Remove Test Folder"
- tapOn: "Remove Test Folder"
- assertVisible: "Delete"
- tapOn: "Delete"
- assertVisible: "Delete Test Folder?"
- tapOn: "Delete"
- assertVisible: "No bookmarks added yet"
- tapOn: "Done"
- tapOn: "Done"
